Simplify access checks